--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <li class="nav-item">
               <a class="nav-link" href="meetme.html">About</a>
             </li>
+            <li class="nav-item">
+                    <a class="nav-link" href="index.html#work">Work</a>
+                  </li>
         </ul>
         <span class="nav-item mt-3">
           <p>
@@ -33,33 +36,36 @@
 </nav>
 
 <div class="collapse" id="collapseExample">
-    <div class="container" id="contactform">
+    <div class="container-fluid" id="contactform">
         <div class="row">
             <div class="col-lg-6 mt-4">
                 <h4>SAY HI!</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
             <div class="col-lg-6">
-                <form >
+
+
                         <div class="form-group mt-4">
                             <h4>
                                 CONTACT FORM
                             </h4>
                         </div>
+                        <form>
+          
                         <div class="form-group">
                             <label for="firstName">First Name</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="first name">
+                            <input name="firstName" type="text" class="form-control" id="firstName" placeholder="first name">
                         </div>
                         <div class="form-group">
                             <label for="email">Email address</label>
-                            <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                            <input name="email" type="email" class="form-control" id="email" placeholder="name@example.com">
                             </div>
                         <div class="form-group">
                             <label for="message">Message</label>
-                            <textarea rows="4" class="form-control" id="message" placeholder="enter your message here"></textarea>
+                            <textarea name ="message" rows="4" class="form-control" id="message" placeholder="enter your message here"></textarea>
                         </div>
                         <div class="form-group">
-                            <button id="sendEmail" type="button" class="btn btn-primary" data-target="#send" data-toggle="modal">Send Email</button>
+                            <button id="sendEmail" type="button" class="btn btn-primary">Send Email</button>
                         </div>
                 </form> 
             </div> 
@@ -71,44 +77,53 @@
 
   <!-- Jumbotron -->
 
-  <div class="jumbotron">
-    <h1>HI, I'M BELLE. </h1>
-    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-    <br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua </h2>
+  <div class="jumbotron text-center">
+    <h1>Hi, I'm Belle and I am a problem solver. </h1>
+    <h3> Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+    <br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua </h3>
     <br>
     <div class="container-fluid text-center"><i class="fas fa-chevron-down fa-2x"></i></div>
   </div>
 
 <!--project section-->
-<div class="container-fluid" id="projectsection">
-  <h2 class="projectsection text-center">project work</h2>
-  <div class="row justify-content-center">
-        <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="https://via.placeholder.com/350x150" alt="echoceramicspic">
-                <div class="card-body">
-                  <h5 class="card-title">project1</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="project1.html" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://via.placeholder.com/350x150" alt="echoceramicspic">
-            <div class="card-body">
-                <h5 class="card-title">project2</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="project2.html" class="btn btn-primary">Go somewhere</a>
+
+<div class="container" id="work">
+    <div class="row">
+        <div class="col-12">
+            <h2 class="header-projwork text-center">project work</h2>
+        </div>
+        <!--project 1-->
+        <div class="project-text col-lg-6 col-sm-12 ">
+            <h2>project 1</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae magnam, natus numquam vel dolore maiores! Velit tempora pariatur accusamus deserunt aspernatur distinctio magnam ratione, officia esse laboriosam fuga odio.</p>
+            <a class="btn btn-primary" href="project1.html">Learn More</a>
+        </div>
+        <div class="project-img col-lg-6 col-sm-12">
+            <img src="assets/project1/echoceramics_mockup_greenbg.png" alt="ceramics pottery" style="height:auto; width:inherit;">
+        </div>
+        <!--project 2-->
+        <div class="project-img col-lg-6 col-sm-12">
+                <img src="assets/project1/mockup place holder.png" alt="project2" style="width:inherit; height:auto;">
             </div>
-            </div>
-        <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="https://via.placeholder.com/350x150" alt="echoceramicspic">
-                <div class="card-body">
-                    <h5 class="card-title">project3</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="project1.html" class="btn btn-primary">Go somewhere</a>
-                </div>
-                </div>
-  </div>
-</div>
+        <div class="project-text col-lg-6 col-sm-12">
+            <h2>project 2</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae magnam, natus numquam vel dolore maiores! Velit tempora pariatur accusamus deserunt aspernatur distinctio magnam ratione, officia esse laboriosam fuga odio.</p>
+            <a class="btn btn-primary" href="project2.html">Learn More</a>
+        </div>
+        <!--project 3-->
+        <div class="project-text col-lg-6 col-sm-12">
+            <h2>project 3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae magnam, natus numquam vel dolore maiores! Velit tempora pariatur accusamus deserunt aspernatur distinctio magnam ratione, officia esse laboriosam fuga odio.</p>
+            <a class="btn btn-primary" href="project3.html">Learn More</a>
+        </div>
+        <div class="project-img col-lg-6 col-sm-12">
+            <img src="assets/project1/mockup place holder.png" alt="project3" style="width:inherit; height:auto;">
+        </div>
+    </div>
+
+</div> 
+
+
 
 <!--project process-->
 
@@ -120,7 +135,7 @@
     
 <!--FOOTER-->
 
-<footer class="footer mt-4 justify-content-center">
+<footer class="footer mt-4 mb-4 justify-content-center">
   <div class="container text-center">
     <span class="content">
         <a href="https://www.linkedin.com/in/bellechuang/"><i class="fab fa-linkedin fa-2x"></i></a>
@@ -128,6 +143,7 @@
     </span>
   </div>
 </footer>
+
   <!-- Modal-submit response-->
   <div class="modal fade" id="send" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
@@ -148,7 +164,10 @@
   </div>
 
 <!--javascript-->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> 
         <script src="code.js" type="text/javascript"></script>
