--- a/meetme.html
+++ b/meetme.html
@@ -13,6 +13,7 @@
     <link rel ="stylesheet" href="style.css">
     <link rel ="stylesheet" href="meetmestyle.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
 </head>
@@ -24,10 +25,13 @@
                 <li class="nav-item">
                   <a class="nav-link" href="meetme.html">About</a>
                 </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="index.html#work">Work</a>
+                      </li>
             </ul>
             <span class="nav-item mt-3">
               <p>
-              <a class="nav-link" id="contactbutton" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample"><i class="far fa-envelope"></i></a>
+              <a class="nav-link" id="contactbutton" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample"><i class="far fa-envelope fa-1.5x"></i></a>
             </p>
             </span>
     </nav>
@@ -83,10 +87,6 @@
 <!--timeline-->
 
 
-<header>
-    <h1>My Timeline</h1>
-</header>
-
 <section id="cd-timeline" class="cd-container">
     <div class="cd-timeline-block">
         <div class="cd-timeline-img cd-picture">
@@ -107,7 +107,6 @@
         <div class="cd-timeline-content">
             <h2>Started Strategy Consulting</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
-            <a href="#0" class="cd-read-more">Read more</a>
             <span class="cd-date">Jan 18</span>
         </div> <!-- cd-timeline-content -->
     </div> <!-- cd-timeline-block -->
@@ -120,7 +119,6 @@
         <div class="cd-timeline-content">
             <h2>Launched Photography Business</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
-            <a href="#0" class="cd-read-more">Read more</a>
             <span class="cd-date">Jan 24</span>
         </div> <!-- cd-timeline-content -->
     </div> <!-- cd-timeline-block -->
@@ -133,7 +131,6 @@
         <div class="cd-timeline-content">
             <h2>Found UX</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-            <a href="#0" class="cd-read-more">Read more</a>
             <span class="cd-date">Feb 14</span>
         </div> <!-- cd-timeline-content -->
     </div> <!-- cd-timeline-block -->
@@ -176,5 +173,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> 
         <script src="code.js" type="text/javascript"></script>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
 </body>
 </html>
